tests/testcases/errors/BCE0081-4.boo
"""
BCE0081-4.boo(11,9): BCE0081: A raise statement with no arguments is not allowed outside an exception handler.
"""
print('start')

try:
	raise "an exception"
except:
	print('exception')
	a = def ():
		raise
print('end')

